--- a/styles.css
+++ b/styles.css
@@ -625,7 +625,7 @@ footer p {
         grid-template-columns: 250px 1030px;
         grid-template-rows: auto;
         width: 1280px;
-
+        margin: 0 auto;
     }
 
     nav {
@@ -777,18 +777,23 @@ footer p {
         justify-self: center;
         
     }
-    section > div:nth-child(2) {
+    #mexican {
+        grid-column: 1/2;
         grid-row: 2/3;
+    }
+    #salsa {
         grid-column: 2/3;
+        grid-row: 2/3;
         
     }
-section > div:nth-child(3) {
-        grid-row: 2/3;
+#guac {
         grid-column: 3/4;
-    }
-section > div:last-child {
         grid-row: 2/3;
+    }
+#tortillas {
         grid-column: 4/5;
+        grid-row: 2/3;
+        
     }
     section img {
         width: 250px;
@@ -855,4 +860,24 @@ section > div:last-child {
         margin: 50px 55px;
     }
     
+}
+@media print {
+    @page {
+    margin: .5in;
+        
+    }
+     html, body {
+    font-family: serif;
+    
+  }
+     a:after {
+    content: "("attr(href)")";
+  }
+    nav {
+        display: none;
+    }
+    img {
+    -webkit-filter: grayscale(100%); 
+    filter: grayscale(100%);
+    }
 }
