--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,15 @@ menu button {
     text-align: center;
     margin: 0 auto;
     padding: 0 2px;
+    
 }
-
+#jump::after {
+    content: " to recipe";
+}
 menu button:hover {
     color: #f2f2f2;
     background-color: #EB5428;
+    
 }
 
 menu svg {
@@ -196,10 +200,12 @@ form button {
     grid-column: 2/3;
     grid-row: 1/2;
     z-index: 0;
-    height: 45px;
-    width: 55px;
+    height: 43px;
+    width: 56px;
     background-color: #EB5428;
     border: none;
+    position: relative;
+    right: 2px;
 }
 
 form svg {
@@ -208,7 +214,7 @@ form svg {
     background-color: #EB5428;
     display: inline-block;
     padding: 0 5px;
-    margin-left: 5px;
+    margin-left: 4px;
     margin-top: 0px;
 }
 
@@ -478,10 +484,9 @@ footer p {
         background-color: transparent;
 
     }
-
-    #jump {
-        display: none;
-    }
+    #jump::after {
+    content: "";
+}
 
     menu {
         position: relative;
@@ -662,7 +667,7 @@ footer p {
     form {
         position: absolute;
         top: 130px;
-        left: 160px;
+        left: 140px;
         background-color: #f2f2f2;
     }
 
