--- a/styles.css
+++ b/styles.css
@@ -667,7 +667,8 @@ footer p {
     form {
         position: absolute;
         top: 130px;
-        left: 140px;
+        left: 200px;
+        justify-content: center;
         background-color: #f2f2f2;
     }
 
